# nmpy

./: .gitignore  LICENSE  NOTES.md  README.md  requirements-dev.txt  requirements.txt  setup.cfg
examples/error/: approx_error.py  round_off_error.py  taylor_series_approximation.py  taylor_series_terms.py  truncation_error.py
examples/linalg/: heat_transfer_rod_direct_solver_tdma.py  linalg_inv.py  linalg_solve.py
nm/: error.py  linalg.py  typing.py
src/errors/: approx_error.py  forward_euler.py  relative_error.py  taylor_series_approx.py  taylor_series_terms.py  truncation_error.py
src/linsolv/: gauss_seidel.py  heat_transfer_rod_direct_solver_solve.py  heat_transfer_rod_direct_solver_tdma.py  jacobi.py  linalg_inv.py  linalg_solve.py  tdma.py
src/types/: type_aliases.py
tests/linalg/: gs_test.py  jacobi_test.py
