[metadata]
name = nm
version = 0.1.0
description = Numerical Method Algorithms in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abzrg/nm
author = Ali Bozorgzadeh
author_email = alixbozorgzadeh+github@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*
    examples*

[bdist_wheel]
universal = True
